--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -48,13 +48,40 @@
                   turbo_method: :delete,
                   turbo_confirm: "Are you sure?"
         }%>
-    </div>
+    </div><br><br><br>
 
-    </div>
+      <div class="container-fluid">
+      <h4>Comments</h4>
+      <% @article.comments.each do |comment| %>
+        <div class="card mb-3">
+          <div class="card-header">
+            <strong>Commenter: </strong><%= comment.commenter %>
+          </div>
+          <div class="card-body">
+            <p class="card-text"><strong>Comment:</strong> <%= comment.body %></p>
+          </div>
+        </div>
+      <% end %>
+      </div>
+
+      <div class="container-fluid">
+      <h4>Add Your Comments</h4>
+      <%= form_with model: [ @article, @article.comments.build ], class: "form" do |form| %>
+        <div class="form-group">
+            <%= form.label :commenter %>
+            <%= form.text_field :commenter, class: "form-control", placeholder: "Enter your name" %>
+        </div>
+        <div class="form-group">
+            <%= form.label :body %>
+            <%= form.text_area :body, class: "form-control", placeholder: "Enter your comment" %>
+        </div>
+        <%= form.submit "Add Comment", class: "btn btn-primary" %>
+      <% end %>
+
+      </div>
 
 
-
-
+  </div>
 
 
 
